--- a/Wall_Street_English/html/index.html
+++ b/Wall_Street_English/html/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="styles/common.css" />
 	<link rel="stylesheet" href="styles/index.css" />
 </head>
+
 <body>
 
 	<header class="layout-header">
@@ -60,5 +61,6 @@
 		</div>
 	</footer>
 
+	<script src="js/html5shiv.min.js"></script>
 </body>
 </html>
