--- a/Wall_Street_English/html/index - logined.html
+++ b/Wall_Street_English/html/index - logined.html
@@ -40,30 +40,28 @@
 			<ul class="index-guide">
 				<li class="leveltest">
 					<a href="#">
-						<i class="ico ico-main ico-leveltest"></i>
+						<i class="ico ico-leveltest"></i>
 						<span class="tit">英语水平测试</span>
 						<i class="ico ico-pointer"></i>
 					</a>
 				</li>
 				<li class="classroom">
 					<a href="#">
-						<i class="ico ico-main ico-classroom"></i>
+						<i class="ico ico-classroom"></i>
 						<span class="tit">专业英语课堂</span>
 						<i class="ico ico-pointer"></i>
 					</a>
 				</li>
 				<li class="teachvideo">
 					<a href="#">
-						<i class="ico ico-main ico-teachvideo"></i>
+						<i class="ico ico-teachvideo"></i>
 						<span class="tit">外教教学视频</span>
 						<i class="ico ico-pointer"></i>
 					</a>
 				</li>
-				<li class="consult">
-					<a href="#">
-						<i class="ico ico-main ico-consult"></i>
-						<span class="tit">马上在线咨询</span>
-						<i class="ico ico-pointer"></i>
+				<li class="welcome">
+					<a href="mailto:lin2@887.com">
+						<span class="tit">lin2@887.com<br>欢迎来到华尔街英语为微课堂</span>
 					</a>
 				</li>
 			</ul>
