--- a/Wall_Street_English/html/index.html
+++ b/Wall_Street_English/html/index.html
@@ -39,31 +39,39 @@
 		<div class="container clearfix">
 			<ul class="index-guide">
 				<li class="leveltest">
-					<a href="#">
-						<i class="ico ico-main ico-leveltest"></i>
-						<span class="tit">英语水平测试</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-leveltest"></i>
+							<span class="txt">英语水平测试</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="classroom">
-					<a href="#">
-						<i class="ico ico-main ico-classroom"></i>
-						<span class="tit">专业英语课堂</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-classroom"></i>
+							<span class="txt">专业英语课堂</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="teachvideo">
-					<a href="#">
-						<i class="ico ico-main ico-teachvideo"></i>
-						<span class="tit">外教教学视频</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-classroom"></i>
+							<span class="txt">外教教学视频</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="consult">
-					<a href="#">
-						<i class="ico ico-main ico-consult"></i>
-						<span class="tit">马上在线咨询</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-classroom"></i>
+							<span class="txt">马上在线咨询</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 			</ul>
