--- a/Wall_Street_English/html/index - logined.html
+++ b/Wall_Street_English/html/index - logined.html
@@ -39,29 +39,38 @@
 		<div class="container clearfix">
 			<ul class="index-guide">
 				<li class="leveltest">
-					<a href="#">
-						<i class="ico ico-leveltest"></i>
-						<span class="tit">英语水平测试</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-leveltest"></i>
+							<span class="txt">英语水平测试</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="classroom">
-					<a href="#">
-						<i class="ico ico-classroom"></i>
-						<span class="tit">专业英语课堂</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-classroom"></i>
+							<span class="txt">专业英语课堂</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="teachvideo">
-					<a href="#">
-						<i class="ico ico-teachvideo"></i>
-						<span class="tit">外教教学视频</span>
-						<i class="ico ico-pointer"></i>
+					<a href="#" class="clearfix">
+						<div class="tit">
+							<i class="ico ico-classroom"></i>
+							<span class="txt">外教教学视频</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 				<li class="welcome">
-					<a href="mailto:lin2@887.com">
-						<span class="tit">lin2@887.com<br>欢迎来到华尔街英语为微课堂</span>
+					<a href="mailto:lin2@887.com" class="clearfix">
+						<div class="tit">
+							<span class="txt">lin2@887.com<br>欢迎来到华尔街英语为微课堂</span>
+						</div>
+						<div class="pointer"><i class="ico ico-pointer"></i></div>
 					</a>
 				</li>
 			</ul>
