--- a/Wall_Street_English/html/index.html
+++ b/Wall_Street_English/html/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="target-densitydpi=device-dpi, width=device-width">
+	<meta name="viewport" content="width=device-width">
 	<title>华尔街英语微课堂 Wall Street English</title>
 	<link rel="shortcut icon" href="#?20140403">
 	<link rel="stylesheet" href="styles/common.css" />
@@ -15,18 +15,89 @@
 
 <body>
 
-	<header class="layout-header">
-		<div class="container clearfix">
-			<div class="tit">华尔街英语微课堂</div>
-			<div class="contact"><a class="ico" href="tel:13000000000" title="tel:13000000000"></a></div>
+	<header>
+		<div class="layout-top">
+			<div class="container clearfix">
+				<div class="tit">华尔街英语微课堂</div>
+				<div class="contact"><a class="ico" href="tel:13000000000" title="tel:13000000000"></a></div>
+			</div>
+		</div>
+		<div class="layout-header">
+			<div class="container clearfix">
+				<div class="logo"><i class="ico"></i></div>
+				<div class="navig-trigger">&nbsp;<a href="#"><i class="ico" title="菜单"></i></a></div>
+			</div>
 		</div>
 	</header>
 
 	<nav class="layout-navig">
-		<div class="container clearfix">
-			<div class="logo"><i class="ico"></i></div>
-			<div class="navig"><a href="#"><i class="ico" title="菜单"></i></a></div>
+		<div class="nav-back">
+			<a href="#" class="clearfix">
+				<div class="tit">
+					<i class="ico ico-back"></i>
+					<span class="txt">返回首页</span>
+				</div>
+			</a>
 		</div>
+		<ul class="navig">
+			<li class="back">
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-back"></i>
+						<span class="txt">返回首页</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-join"></i>
+						<span class="txt">加入会员</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-login"></i>
+						<span class="txt">会员登录</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-leveltest"></i>
+						<span class="txt">英语水平测试</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-classroom"></i>
+						<span class="txt">专题英语课堂</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-teachvideo"></i>
+						<span class="txt">外教教学视频</span>
+					</div>
+				</a>
+			</li>
+			<li>
+				<a href="#" class="clearfix">
+					<div class="tit">
+						<i class="ico ico-activity"></i>
+						<span class="txt">特别活动</span>
+					</div>
+				</a>
+			</li>
+
+		</ul>
 	</nav>
 
 	<section class="layout-focus">
@@ -59,7 +130,7 @@
 				<li class="teachvideo">
 					<a href="#" class="clearfix">
 						<div class="tit">
-							<i class="ico ico-classroom"></i>
+							<i class="ico ico-teachvideo"></i>
 							<span class="txt">外教教学视频</span>
 						</div>
 						<div class="pointer"><i class="ico ico-pointer"></i></div>
@@ -68,7 +139,7 @@
 				<li class="consult">
 					<a href="#" class="clearfix">
 						<div class="tit">
-							<i class="ico ico-classroom"></i>
+							<i class="ico ico-consult"></i>
 							<span class="txt">马上在线咨询</span>
 						</div>
 						<div class="pointer"><i class="ico ico-pointer"></i></div>
@@ -86,5 +157,8 @@
 		</div>
 	</footer>
 
+
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/common.js"></script>
 </body>
 </html>
