--- a/Wall_Street_English/html/login.html
+++ b/Wall_Street_English/html/login.html
@@ -31,11 +31,11 @@
 	</header>
 
 	<nav class="layout-navig">
-		<div class="nav-back">
-			<a href="#" class="clearfix">
+		<div class="nav">
+			<a href="#" class="nav-backnavig clearfix">
 				<div class="tit">
 					<i class="ico ico-back"></i>
-					<span class="txt">返回首页</span>
+					<span class="txt">返回菜单</span>
 				</div>
 			</a>
 		</div>
