--- a/Wall_Street_English/html/leveltest-detail.html
+++ b/Wall_Street_English/html/leveltest-detail.html
@@ -101,8 +101,8 @@
 	<section class="layout-main">
 		<div class="container clearfix">
 			<div class="maindetail maindetail-leveltest">
-				<h3>交际英语 <span class="guide">Question 2/10</span></h3>
-				<div class="detail">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say?</div>
+				<h2 class="title title-guide">交际英语 <span>QUESTION 2/10</span></h2>
+				<div class="detail"><h3 class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say?</h3></div>
 				<div class="options">
 					<ul>
 						<li><label><span class="ico checkbox checkbox-checked"></span>Hi!</label></li>
@@ -110,7 +110,7 @@
 						<li><label><span class="ico checkbox"></span>Hey there!</label></li>
 					</ul>
 				</div>
-				<div class="exec">
+				<div class="exec clearfix">
 					<button class="btn btn-prev"><i class="ico"></i>上一题</button>
 					<button class="btn btn-next">下一题<i class="ico"></i></button>
 				</div>
