--- a/Wall_Street_English/html/leveltest-result.html
+++ b/Wall_Street_English/html/leveltest-result.html
@@ -101,8 +101,8 @@
 	<section class="layout-main">
 		<div class="container clearfix">
 			<div class="maindetail maindetail-leveltest">
-				<h3 class="score">您的得分：<span>90</span></h3>
-				<div class="comment">你的英语这么好，又有什么工作拿不下呢？Hold住全场的商务英语达人就是你！</div>
+				<h2 class="title title-score">您的得分：<span>90</span></h2>
+				<div class="detail"><h3 class="comment">你的英语这么好，又有什么工作拿不下呢？Hold住全场的商务英语达人就是你！</h3></div>
 				<div class="list-results">
 					<ul>
 						<li>
@@ -162,7 +162,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="exec clearfix">
+				<div class="exec clearfix txt-right">
 					<button class="btn btn-back">返回<i class="ico"></i></button>
 				</div>
 			</div>
