--- a/Wall_Street_English/html/leveltest.html
+++ b/Wall_Street_English/html/leveltest.html
@@ -103,10 +103,10 @@
 			<div class="mainlist mainlist-leveltest">
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">商务</span><br>
 						<span class="en">Business</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">面对职场挑战，你的英语够用吗？测试一下你的商务英语水平吧！</div>
@@ -118,10 +118,10 @@
 				
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">生活</span><br>
 						<span class="en">Life</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">面对职场挑战，你的英语够用吗？测试一下你的商务英语水平吧！</div>
@@ -133,10 +133,10 @@
 				
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">社交</span><br>
 						<span class="en">Social</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">面对职场挑战，你的英语够用吗？测试一下你的商务英语水平吧！</div>
