--- a/Wall_Street_English/html/teachvideo.html
+++ b/Wall_Street_English/html/teachvideo.html
@@ -103,10 +103,10 @@
 			<div class="mainlist mainlist-teachvideo">
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">英语聊游戏</span><br>
 						<span class="en">The Veido Game</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">玩游戏很开心，但也可能顾此失彼，看看外教Rob有多么纠结吧~</div>
@@ -118,10 +118,10 @@
 				
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">外国萌宠秀</span><br>
 						<span class="en">Feed Dogs</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">想知道老外们如何与自己的宠物相处？让外教Rob来告诉你！</div>
@@ -133,10 +133,10 @@
 				
 				<div class="item">
 					<i class="ico ico-main"></i>
-					<h3 class="tit">
+					<div class="tit">
 						<span class="cn">外貌点评团</span><br>
 						<span class="en">Looking Older</span>
-					</h3>
+					</div>
 					<div class="summary">
 						<a href="#" class="trigger">查看简述 &gt;</a>
 						<div class="txt">你知道怎样描述人的外貌吗？肤质、气色……老外Rob教你怎么说！</div>
