--- a/Wall_Street_English/html/teachvideo.html
+++ b/Wall_Street_English/html/teachvideo.html
@@ -25,7 +25,7 @@
 		<div class="layout-header">
 			<div class="container clearfix">
 				<div class="logo"><i class="ico"></i></div>
-				<div class="navig-trigger">&nbsp;<a href="#"><i class="ico" title="菜单"></i></a></div>
+				<div class="navig-trigger"><a href="#"><i class="ico" title="菜单"></i></a></div>
 			</div>
 		</div>
 	</header>
@@ -104,7 +104,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">英语聊游戏</span><br>
+						<span class="cn">英语聊游戏</span>
 						<span class="en">The Veido Game</span>
 					</div>
 					<div class="summary">
@@ -119,7 +119,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">外国萌宠秀</span><br>
+						<span class="cn">外国萌宠秀</span>
 						<span class="en">Feed Dogs</span>
 					</div>
 					<div class="summary">
@@ -134,7 +134,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">外貌点评团</span><br>
+						<span class="cn">外貌点评团</span>
 						<span class="en">Looking Older</span>
 					</div>
 					<div class="summary">
