--- a/Wall_Street_English/html/leveltest.html
+++ b/Wall_Street_English/html/leveltest.html
@@ -25,7 +25,7 @@
 		<div class="layout-header">
 			<div class="container clearfix">
 				<div class="logo"><i class="ico"></i></div>
-				<div class="navig-trigger">&nbsp;<a href="#"><i class="ico" title="菜单"></i></a></div>
+				<div class="navig-trigger"><a href="#"><i class="ico" title="菜单"></i></a></div>
 			</div>
 		</div>
 	</header>
@@ -104,7 +104,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">商务</span><br>
+						<span class="cn">商务</span>
 						<span class="en">Business</span>
 					</div>
 					<div class="summary">
@@ -119,7 +119,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">生活</span><br>
+						<span class="cn">生活</span>
 						<span class="en">Life</span>
 					</div>
 					<div class="summary">
@@ -134,7 +134,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">社交</span><br>
+						<span class="cn">社交</span>
 						<span class="en">Social</span>
 					</div>
 					<div class="summary">
