--- a/Wall_Street_English/html/teachvideo-detail.html
+++ b/Wall_Street_English/html/teachvideo-detail.html
@@ -25,7 +25,7 @@
 		<div class="layout-header">
 			<div class="container clearfix">
 				<div class="logo"><i class="ico"></i></div>
-				<div class="navig-trigger">&nbsp;<a href="#"><i class="ico" title="菜单"></i></a></div>
+				<div class="navig-trigger"><a href="#"><i class="ico" title="菜单"></i></a></div>
 			</div>
 		</div>
 	</header>
