--- a/Wall_Street_English/html/classroom.html
+++ b/Wall_Street_English/html/classroom.html
@@ -108,7 +108,7 @@
 				<div class="item">
 					<i class="ico ico-main"></i>
 					<div class="tit">
-						<span class="cn">英语俚语</span><br>
+						<span class="cn">英语俚语</span>
 						<span class="en">Idioms English</span>
 					</div>
 					<div class="summary">
