--- a/Wall_Street_English/html/teachvideo.html
+++ b/Wall_Street_English/html/teachvideo.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, target-densityDpi=300">
 	<title>华尔街英语微课堂 Wall Street English</title>
 	<link rel="shortcut icon" href="#?20140403">
 	<link rel="stylesheet" href="styles/common.css" />
