--- a/Wall_Street_English/html/teachvideo.html
+++ b/Wall_Street_English/html/teachvideo.html
@@ -94,7 +94,7 @@
 
 	<section class="layout-focus">
 		<div class="container clearfix">
-			<img src="images/focus.jpg" alt="">
+			<img src="images/focus-teachvideo.jpg" alt="">
 		</div>
 	</section>
 
