add leveltest pointer layer

--- a/Wall_Street_English/html/leveltest-detail.html
+++ b/Wall_Street_English/html/leveltest-detail.html
@@ -95,6 +95,18 @@
 	<section class="layout-focus">
 		<div class="container clearfix">
 			<img src="images/focus-leveltest.jpg" alt="">
+			<div class="leveltest-pointer">
+				<span class="ico current">1</span>
+				<span class="ico">2</span>
+				<span class="ico">3</span>
+				<span class="ico">4</span>
+				<span class="ico">5</span>
+				<span class="ico">6</span>
+				<span class="ico">7</span>
+				<span class="ico">8</span>
+				<span class="ico">9</span>
+				<span class="ico">10</span>
+			</div>
 		</div>
 	</section>
 
