--- a/Wall_Street_English/html/leveltest-result.html
+++ b/Wall_Street_English/html/leveltest-result.html
@@ -19,7 +19,7 @@
 		<div class="layout-top">
 			<div class="container clearfix">
 				<div class="tit">华尔街英语微课堂</div>
-				<div class="contact"><a class="ico" href="tel:13000000000" title="tel:13000000000"></a></div>
+				<div class="contact"><a class="ico" href="tel:4008540085" title="tel:4008540085"></a></div>
 			</div>
 		</div>
 		<div class="layout-header">
@@ -106,7 +106,7 @@
 				<div class="list-results">
 					<hr>
 					<ul>
-						<li>
+						<li class="pass">
 							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
 							<div class="answer">
 								<h4>你的答案：</h4>
@@ -118,7 +118,7 @@
 							</div>
 							<hr>
 						</li>
-						<li>
+						<li class="pass">
 							<div class="question">You are at an important dinner party and you are introduced to the CEO of WSI. What would you say？</div>
 							<div class="answer">
 								<h4>你的答案：</h4>
