--- a/Wall_Street_English/html/classroom-detail.html
+++ b/Wall_Street_English/html/classroom-detail.html
@@ -165,35 +165,6 @@
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/audiojs/audio.min.js"></script>
 	<script src="js/common.js"></script>
-		
-	<script>
- 	audiojs.events.ready(function () {
- 		var as = audiojs.createAll();
- 	});
-
- 	$(function () {
- 		var listenbar = $('.listenbar'),
- 	        listenbtn = null,
- 	        listenAudio = null,
- 	        checkStatusTimer = null,
- 	        isPlaying = null;
-
- 		listenbar.each(function () {
- 			listenbar = $(this);
- 			listenbtn = listenbar.find('.btn-listen');
-
- 			listenbtn.click(function () {
- 				listenbar.find('.play-pause').click();
- 				isPlaying = listenbar.find('.playing').is('.playing');
- 				console.log(isPlaying);
- 				if (isPlaying) {
-					listenbar.addClass('listenbar-playing');
- 				} else {
- 					listenbar.removeClass('listenbar-playing');
- 				};
- 			});
- 		});
- 	});
-	</script>
+	<script src="js/audio.js"></script>
 </body>
 </html>
