--- a/Wall_Street_English/html/classroom-detail-talking_about_your_job.html
+++ b/Wall_Street_English/html/classroom-detail-talking_about_your_job.html
@@ -103,48 +103,44 @@
 			<div class="maindetail maindetail-classroom">
 				<div class="items">
 					<ul>
-						<li class="clearfix">
-							<div class="tit">Taking a message</div>
-							<div class="pointer"><i class="ico ico-pointer"></i></div>
+						<li>
+							<a href="classroom-detail-taking_a_message.html" class="clearfix">
+								<span class="tit">Taking a message</span>
+								<span class="pointer"><i class="ico ico-pointer"></i></span>
+							</a>
 						</li>
-						<li class="clearfix current">
-							<div class="tit">Product presentation</div>
-							<div class="pointer"><i class="ico ico-pointer"></i></div>
+						<li>
+							<a href="classroom-detail-product_presentation.html" class="clearfix">
+								<span class="tit">Product presentation</span>
+								<span class="pointer"><i class="ico ico-pointer"></i></span>
+							</a>
 						</li>
-						<li class="clearfix">
-							<div class="tit">Talking about your job</div>
-							<div class="pointer"><i class="ico ico-pointer"></i></div>
+						<li class="current">
+							<a href="classroom-detail-talking_about_your_job.html" class="clearfix">
+								<span class="tit">Talking about your job</span>
+								<span class="pointer"><i class="ico ico-pointer"></i></span>
+							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="detail">
-					<h2>Product presentation:</h2>
+					<h2>Talking about your job</h2>
 					<div class="listenbar">
-						<audio src="http://www.wselearning.com/audio/travel/at the airport.mp3" preload="auto"></audio>
+						<audio src="http://www.wselearning.com/audio/business/Talk about our job.mp3" preload="auto"></audio>
 						<i class="ico ico-listen"></i>
 						<button class="btn btn-listen">马上试听<i class="ico ico-pointer"></i></button>
 					</div>
 					<hr>
-					<h3>Martin is introducing a new product to John…</h3>
-					<p class="colorBlue">Martin: I want to show you something incredible. This is an amazing new product, John. It's a revolutionary product!</p>
-					<p class="colorGray">John: Is it a computer?</p>					<p class="colorBlue">Martin: No, John. It isn't a computer, it's an automatic electronic secretary.</p>					<p class="colorGray">John: Gosh! What does it do?</p>					<p>Martin: It answers the phone. It types letters. It does everything.</p>					<p class="colorGray">John: Gee! Can you show me?</p>					<p class="colorBlue">Martin: Yes, John, certainly! What's the name of your company, John?</p>
-					<p class="colorGray">John: Plastic Box.</p>					<p class="colorBlue">Martin: OK…..Listen to this!</p>
-					<p class="colorRed">Computer Secretary: Good morning, Plastic Box Company. This is John Berry's secretary. Can I help you?</p>					<p class="colorBlue">Martin: Yes…And if you're not in the office.</p>
-					<p class="colorRed">Computer Secretary: Good morning. John Berry's secretary here. I'm sorry, Mr Berry isn't in the office this morning. Can I take a message?</p>
-					<p class="colorGray">John: Gee, she's beautiful. I want to buy her!</p>					<p class="colorBlue">Martin: Fine! Can you sign here, please?</p>
-					<p class="colorGray">John: There you are!</p>					<p class="colorBlue">Martin: Thank you very much, John. See you again!</p>
-					<p class="colorGray">John: Good Bye!</p>					<hr>
+					<h3>Marco is talking to Kristi about his job...</h3>
+					<p class="colorBlue">Kristi: So, Marco, you're not a student any more, obviously.</p>
+					<p class="colorGray">Marco: No, certainly not! I'm working in the computer industry now. For ECS, Electronic Control and Security, in fact they're a multinational corporation, their headquarters is in Los Angeles, and they have branches all over the world.</p>					<p class="colorBlue">Kristi: Yes, I've heard of ECS, of course. What do you do for them, then? Are you some sort of computer buff?</p>
+					<p class="colorGray">Marco: Certainly not! Here, take a look at my card.</p>					<p class="colorBlue">Kristi: "Marco Benini, Assistant Marketing Manager, Central Italy". Good for you Marco!</p>
+					<hr>
 					<h3>Vocabulary:</h3>
-					<p class="colorGray">Incredible 难以置信的</p>
-					<p class="colorBlue">Impossible, or very difficult, to believe</p>
-					<p class="colorGray">Amazing 令人惊异的</p>
-					<p class="colorBlue">To cause someone to be extremely surprised</p>
-					<p class="colorGray">Revolutionary 革命性的</p>
-					<p class="colorBlue">A very important change in the way that people do things</p>
-					<p class="colorGray">Automatic 自动的</p>
-					<p class="colorBlue">Able to work or move by itself without needing the operation of a person</p>
-					<p class="colorGray">Secretary 秘书</p>
-					<p class="colorBlue">A person with the job of preparing letters, arranging meetings, etc., for another</p>
+					<p class="colorGray">Industry 产业</p>					<p class="colorBlue">One part of the economy in which a company or person is in.</p>
+					<p class="colorGray">Multinational 多国的; 跨国的</p>					<p class="colorBlue">In many different countries.</p>
+					<p class="colorGray">Branch 分枝机构; 分公司</p>					<p class="colorBlue">Local office of a company, not the main Office. Some companies have lots of branches.</p>
+					<p class="colorGray">Buff 专家</p>					<p class="colorBlue">Expert or person who knows a lot about something.</p>
 				</div>
 				<div class="exec clearfix txt-right">
 					<button class="btn btn-back">返回<i class="ico"></i></button>
