--- a/Wall_Street_English/html/leveltest-result.html
+++ b/Wall_Street_English/html/leveltest-result.html
@@ -189,7 +189,7 @@
     <script src="js/jquery.query.js"></script>
 	<script type="text/javascript">
 		function goBack(){
-			window.location.href="leveltest-detail.html?t="+$.query.get('t');  	
+			window.location.href="leveltest.html";  	
 		}
 		
 		function questionList(type,para,myAnswer){
