--- a/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
+++ b/Wall_Street_English/html/teachvideo-detail-feed_dogs.html
@@ -102,14 +102,15 @@
 		<div class="container clearfix">
 			<div class="maindetail maindetail-teachvideo">
 				<h2 class="title">
-					<span class="cn">英语聊游戏</span>
-					<span class="en">The Video Game</span>
+					<span class="cn">外国萌宠</span>
+					<span class="en">Feed Dogs</span>
 				</h2>
 				<div class="detail">
 					<h3>Vocabulary:</h3>
-					<h4>stroke</h4>					<p>run your hands down an animal</p>					<h4>sunset</h4>					<p>or sundown, is the daily disappearance of the Sun</p>					<h4>scent</h4>					<p>sweet smell, especially from flowers</p>
+					<p class="colorGray">saggy</p>					<p class="colorBlue">bending or hanging down too much</p>					<p class="colorGray">nip and tuck</p>					<p class="colorBlue">a cosmetic surgical operation</p>					<p class="colorGray">Botox</p>					<p class="colorBlue">a drug used to treat and remove wrinkles</p>
 					<div class="video txt-center">
-						<img src="images/video.jpg" alt="">
+						<!--video source from youku-->
+						<iframe height=420 width=580 src="http://player.youku.com/embed/XNzM2OTIyNzQ0" frameborder=0 allowfullscreen></iframe>
 					</div>
 				</div>
 				<div class="exec clearfix">
