--- a/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
+++ b/Wall_Street_English/html/classroom-detail-buying_tickets_at_airport.html
@@ -33,7 +33,7 @@
 	<nav class="layout-navig">
 		<ul class="navig">
 			<li class="back">
-				<a href="#" class="clearfix">
+				<a href="index.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-back"></i>
 						<span class="txt">返回首页</span>
@@ -57,7 +57,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="leveltest.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-leveltest"></i>
 						<span class="txt">英语水平测试</span>
@@ -65,7 +65,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="classroom.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-classroom"></i>
 						<span class="txt">专题英语课堂</span>
@@ -73,7 +73,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="teachvideo.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-teachvideo"></i>
 						<span class="txt">外教教学视频</span>
@@ -126,7 +126,7 @@
 				<div class="detail">
 					<h2>Buying tickets at airport</h2>
 					<div class="listenbar">
-						<audio src="http://www.wselearning.com/audio/travel/Travel by plane.mp3" preload="auto"></audio>
+						<audio src="http://www.wselearning.com/audio/travel/Travel by plane.mp3"></audio>
 						<i class="ico ico-listen"></i>
 						<button class="btn btn-listen">马上试听<i class="ico ico-pointer"></i></button>
 					</div>
