--- a/Wall_Street_English/html/index.html
+++ b/Wall_Street_English/html/index.html
@@ -33,7 +33,7 @@
 	<nav class="layout-navig">
 		<ul class="navig">
 			<li class="back">
-				<a href="#" class="clearfix">
+				<a href="index.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-back"></i>
 						<span class="txt">返回首页</span>
@@ -57,7 +57,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="leveltest.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-leveltest"></i>
 						<span class="txt">英语水平测试</span>
@@ -65,7 +65,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="classroom.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-classroom"></i>
 						<span class="txt">专题英语课堂</span>
@@ -73,7 +73,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#" class="clearfix">
+				<a href="teachvideo.html" class="clearfix">
 					<div class="tit">
 						<i class="ico ico-teachvideo"></i>
 						<span class="txt">外教教学视频</span>
@@ -102,7 +102,7 @@
 		<div class="container clearfix">
 			<ul class="index-guide">
 				<li class="leveltest">
-					<a href="#" class="clearfix">
+					<a href="leveltest.html" class="clearfix">
 						<div class="tit">
 							<i class="ico ico-leveltest"></i>
 							<span class="txt">英语水平测试</span>
@@ -111,7 +111,7 @@
 					</a>
 				</li>
 				<li class="classroom">
-					<a href="#" class="clearfix">
+					<a href="classroom.html" class="clearfix">
 						<div class="tit">
 							<i class="ico ico-classroom"></i>
 							<span class="txt">专业英语课堂</span>
@@ -120,7 +120,7 @@
 					</a>
 				</li>
 				<li class="teachvideo">
-					<a href="#" class="clearfix">
+					<a href="teachvideo.html" class="clearfix">
 						<div class="tit">
 							<i class="ico ico-teachvideo"></i>
 							<span class="txt">外教教学视频</span>
